--- a/app/ui/main.html
+++ b/app/ui/main.html
@@ -33,8 +33,8 @@
                     <ul>
                         <li class="js-tag-list-trigger">Browse tags</li>
                         <li class="js-bookmark-form-trigger">Add bookmark</li>
-                        <li>Add bag</li>
-                        <li>Get a tour again</li>
+                        <li class="js-tag-form-trigger">Add tag</li>
+                        <li class="js-tour-trigger">Get a tour again</li>
                         <li>Import from browser</li>
                         <li>Export from browser</li>
                         <li>Import backup</li>
@@ -50,6 +50,7 @@
 
                     <div class="main-view-content">
                         <ul class="bookmark-list js-bookmark-list"></ul>
+                        <p class="default-bookmark-list js-default-bookmark-list">No bookmarks :(</p>
                     </div>
 
                     <div class="search-bar js-search-bar">
@@ -62,6 +63,8 @@
                 </div>
             </div>
 
+            <!-- Overlay menus -->
+    
             <div class="tag-list-menu-wrapper js-tag-list-menu-wrapper">
                 <div class="overlay-menu js-tag-list-menu"></div>
             </div>
@@ -80,6 +83,28 @@
                         <p>
                             <input type="submit" value="Save" class="confirm-button">
                             <button type="button" class="js-bookmark-form-cancel cancel-button">Cancel</button>
+                        </p>
+                    </form>
+                </div>
+            </div>
+
+            <div class="bookmark-deletion-menu-wrapper js-bookmark-deletion-menu-wrapper">
+                <div class="overlay-menu js-bookmark-deletion-menu">
+                    <p>Are you sure you want to remove this bookmark?</p>
+                    <p>
+                        <a href="#" class="confirm-button js-bookmark-deletion-confirm">Here we go</a>
+                        <a href="#" class="cancel-button js-bookmark-deletion-cancel">I change my mind</a>
+                    </p>
+                </div>
+            </div>
+
+            <div class="tag-form-menu-wrapper js-tag-form-menu-wrapper">
+                <div class="overlay-menu js-tag-form-menu">
+                    <form action="#" method="post">
+                        <p><input type="text" name="label" placeholder="My amazing tag"></p>
+                        <p>
+                            <input type="submit" value="Save" class="confirm-button">
+                            <button type="button" class="js-tag-form-cancel cancel-button">Cancel</button>
                         </p>
                     </form>
                 </div>
@@ -191,13 +216,19 @@
             <!-- <div class="error-message js-error-message">
                 <p></p>
             </div> -->
-        </div>
 
-         <div class="context-menu js-bookmark-context-menu">
-            <ul>
-                <li>Edit</li>
-                <li>Remove</li>
-            </ul>
+            <!-- Context menus -->
+
+            <div class="context-menu js-bookmark-context-menu">
+                <ul>
+                    <li class="js-bookmark-context-menu-edit">Edit</li>
+                    <li class="js-bookmark-context-menu-remove">Remove</li>
+                </ul>
+            </div>
+
+            <div class="notifier js-notifier">
+                <div class="notifier-content js-notifier-content"></div>
+            </div>
         </div>
     </body>
 </html>
