--- a/app/ui/intro.html
+++ b/app/ui/intro.html
@@ -5,6 +5,9 @@
 
         <link rel="stylesheet" type="text/css" href="assets/css/intro.css">
         <script type="text/javascript">
+            var gui = require('nw.gui');
+            var FileAPI = require('fs');
+
             if (typeof(window.require) !== "undefined") {
                 window.requireNode = window.require;
                 window.require = undefined;
