Preparing next release

--- a/app/ui/main.html
+++ b/app/ui/main.html
@@ -152,118 +152,13 @@
                     <p><a href="#" class="confirm-button js-create-backup-confirm">I am done</a></p>
                 </div>
             </div>
-    
-
-            <!-- <div class="main-view-wrapper js-main-view-wrapper">
-
-                <div class="panel-wrapper js-panel-wrapper">
-                    <div class="icon-wrapper js-icon-wrapper">
-                        <ul class="icons">
-                            <li class="icon js-menu-trigger">
-                                <img src="assets/img/menu-icon.png" />
-                            </li>
-                            <li class="icon js-bookmark-add-trigger">
-                                <img src="assets/img/bookmark-icon.png" />
-                            </li>
-                            <li class="icon js-tag-form-trigger">
-                                <img src="assets/img/tag-icon.png" />
-                            </li>
-                        </ul>
-                    </div>
-
-                    <div class="tag-list js-tag-list-wrapper">
-                        <ul class="tags js-tag-list">
-                            <li class="js-search-tab">
-                                <p>Search results</p>
-                            </li>
-                            <li class="js-most-popular">
-                                <p>Most popular</p>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-
-                <div class="bookmark-wrapper js-bookmark-wrapper">
-                    <ul class="js-bookmark-list"></ul>
-                    <p class="default-content js-default-content">No bookmarks to display :(</p>
-                </div>
-
-                <div class="search-wrapper js-search-engine">
-                    <img src="assets/img/search-icon.png" />
-                    <form action="#" method="post">
-                        <input type="text" name="searchField" placeholder="Type something to search" />
-                    </form>
-                </div>
-            </div> -->
-
-            <!-- Bookmark form -->
-            <!-- <div class="bookmark-form-wrapper js-bookmark-form-wrapper">
-                <ul class="bookmark-form-wrapper-list">
-                    <li class="column">
-                        <img src="assets/img/right-arrow-icon.png" class="cancel-trigger js-cancel-trigger" />
-                    </li>
-                    <li>
-                        <form action="#" method="post">
-                            <img src="assets/img/default-bookmark-icon.png" class="bookmark-icon js-bookmark-icon" />
-                            <p>
-                                <input type="text" name="url" placeholder="http://" />
-                            </p>
-                            <p>
-                                <input type="text" name="title" placeholder="An awesome title" />
-                            </p>
-                            <p>
-                                <textarea name="description" placeholder="Write something useful about your bookmark"></textarea>
-                            </p>
-                            <ul class="tag-list js-form-tag-list">
-                                
-                            </ul>
-                            <p>
-                                <input type="text" name="tags" placeholder="Press Enter to end a tag" list="tag-suggestions" />
-                                <datalist id="tag-suggestions" class="js-tag-suggestions">
-                                </datalist>
-                            </p>
-                            <p>
-                                <button type="button" class="save-button js-save-button">Save</button>
-                                <button type="button" class="delete-button js-delete-button">Delete</button>
-                            </p>
-                        </form>
-                    </li>
-                    <li class="column"></li>
-            </div> -->
-
-            <!-- <div class="overlay js-overlay">
-                <div class="tag-form-wrapper js-tag-form-wrapper">
-                    <form action="#" method="post">
-                        <p><input type="text" name="tag" placeholder="My amazing tag" /></p>
-                        <p>
-                            <button type="button" class="save-button js-save-tag-button">Save</button>
-                            <button type="button" class="cancel-button js-cancel-tag-button">Cancel</button>
-                        </p>
-                    </form>
-                </div>
-
-                <div class="menu-pannel js-menu-pannel">
-                    <ul>
-                        <li class="js-tour-trigger">Get a tour again</li>
-                        <li class="js-import-browser">Import from web browser</li>
-                        <li class="js-import-backup">Import a backup file</li>
-                    </ul>
-                </div>
-            </div> -->
-
-            <!-- <div class="drag-area js-drag-area">
-                <h1>Drag your file here</h1>
-                <h2>Otherwise, just click</h2>
-            </div> -->
-
-            <!-- <div class="error-message js-error-message">
-                <p></p>
-            </div> -->
 
             <!-- Context menus -->
 
             <div class="context-menu js-bookmark-context-menu">
                 <ul>
+                    <li class="js-bookmark-context-menu-facebook-share">Facebook</li>
+                    <li class="js-bookmark-context-menu-twitter-share">Twitter</li>
                     <li class="js-bookmark-context-menu-edit">Edit</li>
                     <li class="js-bookmark-context-menu-remove">Remove</li>
                 </ul>
