--- a/app/ui/tour.html
+++ b/app/ui/tour.html
@@ -84,8 +84,10 @@
                 </ul>
             </div>
 
-            <div class="error-message js-error-message">
-                <p></p>
+            <!-- Notifier -->
+
+            <div class="notifier js-notifier">
+                <div class="notifier-content dark js-notifier-content"></div>
             </div>
         </div>
     </body>
